--- a/src/app/components/individual-course/individual-course.component.html
+++ b/src/app/components/individual-course/individual-course.component.html
@@ -1,19 +1,19 @@
 <div class="row">
   <div class="col-sm-6">
     <mat-card>
-      <mat-card-title>{{course.course_name}}</mat-card-title>
+      <mat-card-title><h1>{{course.name}}</h1></mat-card-title>
       <mat-card-subtitle>{{course.codification}} - {{course.section}}</mat-card-subtitle>
     </mat-card>
 
+    <!-- Gauges showing progress in course, of cummulative avg and expected avg -->
     <mat-card>
       <mat-card-title>Progress</mat-card-title>
       <mat-card-content>
-        <!--<mat-progress-bar mode="determinate" value="{{progress}}"></mat-progress-bar>-->
-        <!--<mat-chip class="offset-9">{{progress}} %</mat-chip>-->
-        <div id="gauge" ></div>
+        <app-grade-gauge></app-grade-gauge>
       </mat-card-content>
     </mat-card>
 
+    <!-- Grades -->
     <mat-card>
       <mat-expansion-panel>
       <mat-expansion-panel-header>
@@ -38,14 +38,15 @@
               <td>{{g.grade}}/{{g.total}}</td>
             </tr>
 
+            <!-- New grade form -->
             <tr>
-              <th scope="row"><mat-form-field><input matInput placeholder="New Grade Name"></mat-form-field></th>
+              <td scope="row"><mat-form-field><input matInput placeholder="New Grade Name" [(ngModel)]="newGrade.name"></mat-form-field></td>
               <td><mat-form-field>
-                <input matInput [matDatepicker]="picker" placeholder="Date">
+                <input matInput disabled [matDatepicker]="picker" placeholder="Date" [(ngModel)]="newGrade.date">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
+                <mat-datepicker #picker disabled="false"></mat-datepicker>
               </mat-form-field></td>
-              <td><mat-form-field><input matInput placeholder="Weight"></mat-form-field></td>
+              <td><mat-form-field><input matInput placeholder="Weight" [(ngModel)]="newGrade.weight"></mat-form-field></td>
               <td>
                 <!--<div [formGroup]="parts">-->
                   <!--<input class="area" formControlName="area" size="3">-->
@@ -56,8 +57,11 @@
                 <!--</div>-->
 
 
-                <mat-form-field><input matInput placeholder="Grade"></mat-form-field></td>
+                <mat-form-field><input matInput placeholder="Grade" [(ngModel)]="newGrade.grade"></mat-form-field></td>
+
             </tr>
+
+            <button mat-button (click)="addGrade()">Add</button>
 
             </tbody>
           </table>
@@ -91,6 +95,7 @@
       </mat-expansion-panel>
     </mat-card>
 
+    <!-- Help buttons -->
     <mat-card>
         <mat-card-content>
           <mat-list>
@@ -101,20 +106,39 @@
     </mat-card>
   </div>
 
+  <!-- Tasks -->
   <div class="col-sm-6">
     <mat-card>
       <div class="row">
+        <!-- Undonde tasks -->
         <div class="col-sm-6" >TO DO
-          <mat-list *ngFor="let t of undoneTasks">
-            <mat-list-item><mat-checkbox>{{t.title}}</mat-checkbox></mat-list-item>
-          </mat-list>
-          <button mat-mini-fab (click)="openForm()">+</button>
+          <!--<div-->
+            <!--cdkDropList-->
+            <!--#todoList-->
+            <!--[cdkDropListData]="todo"-->
+            <!--[cdkDropListConnectedTo]="[doneList]"-->
+            <!--(cdkDropListDropped)="drop($event)">-->
+            <mat-list *ngFor="let t of undoneTasks">
+              <div cdkDrag><mat-list-item><mat-checkbox>{{t.title}}</mat-checkbox></mat-list-item></div>
+            </mat-list>
+          <!--</div>-->
+          <button mat-mini-fab (click)="openForm()"><mat-icon>add</mat-icon></button>
         </div>
+
         <mat-divider [vertical]="true"></mat-divider>
+
+        <!-- Done tasks -->
         <div class="col-sm-5">DONE
-          <mat-list *ngFor="let t of doneTasks">
-            <mat-list-item><mat-checkbox [checked]="true" [color]="" matTooltip="{{t.description}}">{{t.title}}</mat-checkbox></mat-list-item>
-          </mat-list>
+          <!--<div-->
+            <!--cdkDropList-->
+            <!--#doneList-->
+            <!--[cdkDropListData]="done"-->
+            <!--[cdkDropListConnectedTo]="[todoList]"-->
+            <!--(cdkDropListDropped)="drop($event)">-->
+            <mat-list *ngFor="let t of doneTasks">
+              <mat-list-item><mat-checkbox [checked]="true" [color]="" matTooltip="{{t.description}}">{{t.title}}</mat-checkbox></mat-list-item>
+            </mat-list>
+          <!--</div>-->
         </div>
       </div>
     </mat-card>
