--- a/src/app/components/sharedComponents/topnavbar/topnavbar.component.html
+++ b/src/app/components/sharedComponents/topnavbar/topnavbar.component.html
@@ -33,7 +33,7 @@
           <div class="dropdown-menu dropdown-menu-right animated zoomIn">
             <ul class="dropdown-user">
               <li><a [routerLink]="[ mainpath, { outlets: { content: 'profile' } }]"><i class="ti-user"></i> Profile</a></li>
-              <li><a href="#"><i class="ti-settings"></i> Settings</a></li>
+              <!--<li><a href="#"><i class="ti-settings"></i> Settings</a></li>-->
               <li role="separator" class="divider"></li>
               <li><a href="/logout"><i class="fa fa-power-off"></i> Logout</a></li>
             </ul>
