commit to make changes for build

--- a/src/app/components/grade-gauge/grade-gauge.component.html
+++ b/src/app/components/grade-gauge/grade-gauge.component.html
@@ -1,11 +1,12 @@
 <div class="row">
-  <div class="col-sm-6">
-    <h5>Curent Grade</h5>
-    <div id="gauge1" class="chart"></div>
+  <div class="col-sm-6" >
+    <h5 class="center">Curent Grade</h5>
+    <h1 class="center">{{progress}} %</h1>
+    <!--<div id="gauge1" class="chart"></div>-->
   </div>
   <div class="col-sm-6">
     <h5 center>Projected Grade</h5>
-    <div id="gauge2" class="chart"></div>
+    <!--<div id="gauge2" class="chart"></div>-->
   </div>
 </div>
 
