--- a/src/app/components/mains/adminmain/adminmain.component.html
+++ b/src/app/components/mains/adminmain/adminmain.component.html
@@ -269,7 +269,7 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="card-two">
-                          <li *ngFor="let hero of heroes" (click)="onSelect(hero)">
+                          <!--<li *ngFor="let hero of heroes" (click)="onSelect(hero)">-->
                             <header>
                                 <div class="avatar">
                                     <img src="https://randomuser.me/api/portraits/women/21.jpg" alt="Allison Walker" />
