--- a/src/app/components/mentorsPage/student-detail/student-detail.component.html
+++ b/src/app/components/mentorsPage/student-detail/student-detail.component.html
@@ -41,7 +41,7 @@
   <app-comment-button></app-comment-button>
 </mat-card>
 
-<!-- Calendar with student's schedule -->
+<!-- Calendar with student's schedule-viejo -->
 <mat-card class="col-sm-8">
   <h2>Schedule</h2>
   <mbsc-eventcalendar showOnFocus="true"></mbsc-eventcalendar>
