--- a/src/app/components/studentPages/individual-course/individual-course.component.html
+++ b/src/app/components/studentPages/individual-course/individual-course.component.html
@@ -9,7 +9,7 @@
     <mat-card>
       <mat-card-title>Progress</mat-card-title>
       <mat-card-content>
-        <app-grade-gauge></app-grade-gauge>
+        <app-grade-gauge [student]=""></app-grade-gauge>
       </mat-card-content>
     </mat-card>
 
