--- a/src/app/components/mains/psychologistmain/psychologistmain.component.html
+++ b/src/app/components/mains/psychologistmain/psychologistmain.component.html
@@ -14,9 +14,9 @@
               <li class="nav-label">Courses</li>
               <li> <a class="has-arrow  " href="#" aria-expanded="false"><i class="fa fa-columns"></i><span class="hide-menu">Courses</span></a>
                   <ul aria-expanded="false" class="collapse">
-                    <div *ngFor="let c of courses">
-                      <li><a [routerLink]="[ '/main', { outlets: { content: 'course' } }]" [queryParams]="{ course: c.codification }" >{{c.course_name}}</a></li>
-                    </div>
+                    <!--<div *ngFor="let c of courses">-->
+                      <!--<li><a [routerLink]="[ '/main', { outlets: { content: 'course' } }]" [queryParams]="{ course: c.codification }" >{{c.course_name}}</a></li>-->
+                    <!--</div>-->
                   </ul>
               </li>
               <li class="nav-label">Schedule</li>
