--- a/src/app/components/sharedComponents/breadcrumb/breadcrumb.component.html
+++ b/src/app/components/sharedComponents/breadcrumb/breadcrumb.component.html
@@ -1,7 +1,7 @@
   <!-- Bread crumb -->
   <div class="row page-titles">
       <div class="col-md-5 align-self-center">
-          <h3 class="text-primary">{{current_content}}</h3> </div>
+          <!--<h3 class="text-primary">{{current_content}}</h3> </div>-->
       <div class="col-md-7 align-self-center">
           <ol class="breadcrumb">
               <!--<li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>-->
