--- a/src/app/components/student-courses-table/student-courses-table.component.html
+++ b/src/app/components/student-courses-table/student-courses-table.component.html
@@ -12,7 +12,14 @@
     <!--<div *ngFor="let c of courses">-->
     <tr *ngFor="let c of courses">
       <th scope="row">
-        <a [routerLink]="[ '/main', { outlets: { content: 'course' } }]" [queryParams]="{ course: c.codification }" >{{c.name}}</a>
+        <!-- Students can select a course to view its details -->
+        <div *ngIf="courseSelectDisabled==false">
+          <a [routerLink]="[ '/studentmain', { outlets: { content: 'course' } }]" [queryParams]="{ course: c.id }" >{{c.name}}</a>
+        </div>
+        <!-- Mentors are not allowed to click courses -->
+        <div *ngIf="courseSelectDisabled==true">
+          <a>{{c.name}}</a>
+        </div>
       </th>
       <td>{{c.general_average}}</td>
       <td><span *ngIf="c.status==3" class="badge badge-success">PASSING</span>
