--- a/src/app/components/sharedComponents/topnavbar/topnavbar.component.html
+++ b/src/app/components/sharedComponents/topnavbar/topnavbar.component.html
@@ -7,10 +7,10 @@
     <div class="navbar-header">
       <!-- fix this index -->
       <a class="navbar-brand" href="index.html">
-        <!-- Logo icon -->
-        <b><img src="/images/logo.png" alt="homepage" class="dark-logo" /></b>
         <!-- Logo text -->
-        <span><img src="/images/logo-text.png" alt="homepage" class="dark-logo" /></span>
+        <span><img src="/assets/logo-big.png" width="300px" alt="homepage" class="dark-logo" /></span>
+        <!-- Logo icon -->
+        <b><img src="/assets/logo-small.png" height="50px" alt="homepage" class="dark-logo" /></b>
       </a>
     </div>
 
@@ -18,7 +18,7 @@
 
       <ul class="navbar-nav mr-auto mt-md-0">
         <!-- Role -->
-        <li class="nav-item"><a class="hidden-sm-down text-muted">{{role}}</a></li>
+        <!--<span class="nav-item"><a class="hidden-sm-down text-muted">{{role}}</a></span>-->
       </ul>
 
       <!-- Right Aligned -->
