--- a/src/app/components/logins/psychologistlogin/psychologistlogin.component.html
+++ b/src/app/components/logins/psychologistlogin/psychologistlogin.component.html
@@ -3,6 +3,8 @@
         <div class="row justify-content-center">
             <div class="col-lg-4">
                 <div class="login-content card">
+                  <!-- Logo -->
+                  <img src="src/assets/logo-big.png" class="logo"/>
                     <div class="login-form">
                         <h4>Psychologist Login</h4>
                       <app-erroralert></app-erroralert>
