--- a/src/app/components/studentPages/dashboard/dashboard.component.html
+++ b/src/app/components/studentPages/dashboard/dashboard.component.html
@@ -1,99 +1,15 @@
 <div class="row">
-  <!--<mat-card>-->
-    <!--<div class="row">-->
-      <!--<div class="col-sm-6">-->
-
-      <!--</div>-->
-      <!--<div class="col-sm-6">-->
-
-      <!--</div>-->
-    <!--</div>-->
-    <div class="col-sm-12">
-      <div class="row bg-white m-l-0 m-r-0 box-shadow ">
-            <!-- Column -->
-
-            <!--<div class="col-lg-4">-->
-                <!--<div class="card">-->
-                    <!--<div class="card-body">-->
-                        <!--<div class="card-two">-->
-                            <!--<header>-->
-                                <!--<div class="avatar">-->
-                                    <!--<img src="https://randomuser.me/api/portraits/women/21.jpg" alt="Allison Walker" />-->
-                                <!--</div>-->
-                            <!--</header>-->
-
-                            <!--<h3>Patricia Benites</h3>-->
-                            <!--<div class="desc">-->
-                                <!--Escuela de Ingeniería de Computadoras - 4to Año-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-
-          <div class="col-sm-4">
-            <h2>My Courses</h2>
-            <app-student-courses-table></app-student-courses-table>
-    <!--<div class="table-responsive">-->
-      <!--<h2>My Courses</h2>-->
-      <!--<table class="table table-hover ">-->
-        <!--<thead>-->
-        <!--<tr>-->
-          <!--<th>Name</th>-->
-          <!--<th>Grade</th>-->
-          <!--<th>Status</th>-->
-        <!--</tr>-->
-        <!--</thead>-->
-        <!--<tbody>-->
-        <!--&lt;!&ndash;<div *ngFor="let c of courses">&ndash;&gt;-->
-          <!--<tr *ngFor="let c of courses">-->
-            <!--<th scope="row"><a [routerLink]="[ '/main', { outlets: { content: 'course' } }]" [queryParams]="{ course: c.codification }" >{{c.name}}</a></th>-->
-            <!--<td>{{c.grade}}</td>-->
-            <!--<td><span *ngIf="c.status=='PASSING'" class="badge badge-success">PASSING</span>-->
-                <!--<span *ngIf="c.status=='NOT PASSING'" class="badge badge-danger">NOT PASSING</span>-->
-                <!--<span *ngIf="c.status=='SURVIVING'" class="badge badge-warning">SURVIVING</span>-->
-            <!--</td>-->
-          <!--</tr>-->
-        <!--&lt;!&ndash;</div>&ndash;&gt;-->
-        <!--&lt;!&ndash;<tr>&ndash;&gt;-->
-          <!--&lt;!&ndash;<th scope="row">1</th>&ndash;&gt;-->
-          <!--&lt;!&ndash;<td>Cálculo I</td>&ndash;&gt;-->
-          <!--&lt;!&ndash;<td><span class="badge badge-primary">Inhabilitado</span></td>&ndash;&gt;-->
-          <!--&lt;!&ndash;<td>January 22</td>&ndash;&gt;-->
-        <!--&lt;!&ndash;</tr>&ndash;&gt;-->
-        <!--&lt;!&ndash;<tr>&ndash;&gt;-->
-          <!--&lt;!&ndash;<th scope="row">2</th>&ndash;&gt;-->
-          <!--&lt;!&ndash;<td>Física</td>&ndash;&gt;-->
-          <!--&lt;!&ndash;<td><span class="badge badge-success">Activo</span></td>&ndash;&gt;-->
-          <!--&lt;!&ndash;<td>January 30</td>&ndash;&gt;-->
-        <!--&lt;!&ndash;</tr>&ndash;&gt;-->
-        <!--&lt;!&ndash;<tr>&ndash;&gt;-->
-          <!--&lt;!&ndash;<th scope="row">3</th>&ndash;&gt;-->
-          <!--&lt;!&ndash;<td>Ingles</td>&ndash;&gt;-->
-          <!--&lt;!&ndash;<td><span class="badge badge-danger">Desaprobado</span></td>&ndash;&gt;-->
-          <!--&lt;!&ndash;<td>January 25</td>&ndash;&gt;-->
-        <!--&lt;!&ndash;</tr>&ndash;&gt;-->
-        <!--</tbody>-->
-      <!--</table>-->
-    <!--</div>-->
-  </div>
-            <!-- Column -->
-            <!-- column -->
-            <div class="col-lg-8">
-              <app-time-management-pie-chart></app-time-management-pie-chart>
-                <!--<div class="card">-->
-                    <!--<div class="card-body">-->
-                        <!--<h4 class="card-title">Time spent per task</h4>-->
-                        <!--&lt;!&ndash;<div id="extra-area-chart"></div>          &ndash;&gt;-->
-                        <!--<div id="donutchart" style="width: 540px; height: 300px;"></div>-->
-                    <!--</div>-->
-                <!--</div>-->
-            </div>
-
-
-        </div>
+  <div class="col-sm-12">
+    <div class="row bg-white m-l-0 m-r-0 box-shadow ">
+      <!-- Courses table -->
+      <div class="col-sm-4">
+        <h2>My Courses</h2>
+        <app-student-courses-table [courseSelectDisabled]="false"></app-student-courses-table>
+      </div>
+      <!-- Time management graph -->
+      <div class="col-lg-8">
+        <app-time-management-pie-chart></app-time-management-pie-chart>
+      </div>
     </div>
-  <!--</mat-card>-->
-
-
+  </div>
 </div>
