student provider works

--- a/src/app/components/sharedComponents/topnavbar/topnavbar.component.html
+++ b/src/app/components/sharedComponents/topnavbar/topnavbar.component.html
@@ -6,7 +6,7 @@
     <!-- Logo -->
     <div class="navbar-header">
       <!-- fix this index -->
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand">
         <!-- Logo text -->
         <span><img src="/assets/logo-big.png" width="300px" alt="homepage" class="dark-logo" /></span>
         <!-- Logo icon -->
