--- a/src/app/components/studentPages/mentors/mentors.component.html
+++ b/src/app/components/studentPages/mentors/mentors.component.html
@@ -3,7 +3,7 @@
     <mat-card>
       <mat-card-header>
         <mat-card-title>Anfitriones</mat-card-title>
-        <mat-card-subtitle>Los anfitriones te pueden ofrecer ayuda relacionada al uso de la aplicacion</mat-card-subtitle>
+        <mat-card-subtitle>Los anfitriones te pueden ofrecer ayuda relacionada al uso de la aplicacion.</mat-card-subtitle>
       </mat-card-header>
       <mat-divider></mat-divider>
       <mat-card-actions>
@@ -16,7 +16,8 @@
     <mat-card>
       <mat-card-header>
         <mat-card-title>Consejeria</mat-card-title>
-        <mat-card-subtitle>Los consejeros te pueden ayudar con el manejo de tiempo, traslados internos y externos...</mat-card-subtitle>
+        <mat-card-subtitle>Los consejeros te pueden ayudar con tu manejo de tiempo, traslados internos y externos e
+          identificar intereses vocacionales.</mat-card-subtitle>
       </mat-card-header>
       <mat-divider></mat-divider>
 
@@ -32,7 +33,9 @@
     <mat-card>
       <mat-card-header>
         <mat-card-title>Psicologia</mat-card-title>
-        <mat-card-subtitle>Los psicologos...</mat-card-subtitle>
+        <mat-card-subtitle>Los psicologos te pueden ayudar con problemas intrapersonales y/o interpersonales, como el
+          estres, la tristeza, la ansiedad, problemas con concentracion, problemas de pareja, problemas familiares o
+          problemas de amigos.</mat-card-subtitle>
       </mat-card-header>
       <mat-divider></mat-divider>
 
