--- a/src/app/components/studentPages/task-form/form-modal.html
+++ b/src/app/components/studentPages/task-form/form-modal.html
@@ -42,7 +42,7 @@
         <!--<div class="col-sm-4">-->
           <td>
             <mat-form-field class="form-field" appearance="outline">
-              <input matInput placeholder="Starts" [(ngModel)]="data.start" disabled>
+              <input matInput [matDatepicker]="start_picker" placeholder="Starts" [(ngModel)]="data.start" disabled>
                 <mat-datepicker-toggle matSuffix [for]="start_picker"></mat-datepicker-toggle>
                 <mat-datepicker #start_picker disabled="false"></mat-datepicker>
             </mat-form-field>
@@ -88,5 +88,5 @@
 
 <!-- Create Task button -->
 <div mat-dialog-actions>
-  <!--<button mat-button [mat-dialog-close]="data" (onclick)="insertTask()">Create Task</button>-->
+  <button mat-button [mat-dialog-close]="data" (onclick)="insertTask()">Create Task</button>
 </div>
