--- a/src/app/components/studentPages/course-detail/course-detail.component.html
+++ b/src/app/components/studentPages/course-detail/course-detail.component.html
@@ -40,7 +40,7 @@
 
             <!-- New grade form -->
             <tr>
-              <td scope="row"><mat-form-field><input matInput placeholder="New Grade Name" [(ngModel)]="newGrade.name"></mat-form-field></td>
+              <td scope="row"><mat-form-field><input matInput placeholder="New Grade Name" [(ngModel)]="newGrade.evaluation"></mat-form-field></td>
               <td><mat-form-field>
                 <input matInput disabled [matDatepicker]="picker" placeholder="Date" [(ngModel)]="newGrade.date">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
